Fix broken CSS variables

--- a/crypto-tracker-client/src/assets/scss/_global.scss
+++ b/crypto-tracker-client/src/assets/scss/_global.scss
@@ -4,7 +4,7 @@ html, body {
 
 html {
   font-size: var(--font-size-base);
-  line-height: var(--font-size-base);
+  line-height: 1.4;
 }
 
 
