--- a/crypto-tracker-client/src/assets/scss/theme/_main.scss
+++ b/crypto-tracker-client/src/assets/scss/theme/_main.scss
@@ -42,7 +42,7 @@
 
 
   // Typography
-  --font-size-base: 14px;
+  --font-size-base: 16px;
   --font-size-body: 100%;
 
   --font-size-title: 3rem;
@@ -66,7 +66,7 @@
   --transition-main: all var(--transition-delay) cubic-bezier(.25,.8,.25,1);
 
   --border-radius-primary: 1rem;
-  --border-radius-secondary: calc(var(--border-radius-primary * .7));
+  --border-radius-secondary: calc(var(--border-radius-primary) * .7);
 
 
   // Header 
